fixed input terminal issue where color options would wrap in a new line

--- a/Notemaker.css
+++ b/Notemaker.css
@@ -174,6 +174,7 @@ min-width: 270px;
   text-align: center;
   padding: 10px 20px 10px 20px;
   margin-bottom: 20px;
+  max-width: 200px;
 }
 
 .colorInput
